# kerberos-auth-proxy

./: .coveragerc  .dockerignore  .flake8  .gitignore  Makefile  conftest.py  docker-compose.dev.yml  pyproject.toml  pytest.ini
.dev/: wait-for-success.sh
kerberos_auth_proxy/mitm/: addon.py  filters.py
tests/: kerberizedrequest.py  kerberizedserver.py  utils.py
tests/integration/: test_addon.py
tests/integration/mitm/addons/: test_kerberos.py
tests/integration/mitm/filters/: test_kerberos.py
tests/stack/: kerberizedrequest.py  kerberizedserver.py
tests/stack/kdc/: Dockerfile  docker-entrypoint.sh  krb5.conf.template
tests/stack/kdc/docker-entrypoint-init.d/: 10-generate-conf.sh  20-setup-kdc.sh  30-setup-principals.sh
tests/unit/: test_utils.py
tests/unit/addons/: test_kerberos.py
tests/unit/mitm/: test_filters.py
tests/unit/mitm/filters/: test_base.py  test_hosts.py  test_kerberos.py
