[tool.poetry]
name = "kerberos-auth-proxy"
version = "0.1.0"
description = "Proxy requests to Kerberos-enabled endpoints"
authors = ["Diógenes Oliveira <diogenes1oliveira@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "kerberos_auth_proxy" }]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
